# ml_interview_exercise

./: .python-version  Building Equipment - Deidentified.xlsx  Demo.ipynb  Exercise.ipynb  Generate.ipynb  README.md  dataset.csv  pyproject.toml  questions.csv  requirements.txt
